...
                android:layout_marginStart="10dp"
                android:text="@string/average_rating"
                android:layout_gravity="center_vertical"
                android:textSize="18sp" />

            <RatingBar
                android:id="@+id/rbAvgRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:saveEnabled="false"
                android:stepSize="0.01"
                android:numStars="5"
                style="@style/Base.Widget.AppCompat.RatingBar.Indicator"/>
...
